--- a/Expense.yml
+++ b/Expense.yml
@@ -1,4 +1,4 @@
-- name: {{ role_name}} Setup
+- name: "{{ role_name }}" Setup
   hosts: all
   become: true
 #  become_user: sudo (optional step as become: true defaults to sudo user)
